welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:4: error: type mismatch;
 found   : plm.universe.Direction
 required: Boolean
while(!estFaceMur || getDirection!==Direction.NORD){
                     ^